fix: response_mode
