# services/authentication-service/openapi.json
@@ -91,13 +91,6 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "response_mode",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "operationId": "AppleLoginController.appleCallback"
@@ -189,15 +182,6 @@
             }
           }
         },
-        "parameters": [
-          {
-            "name": "response_mode",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "operationId": "AuthaLoginController.authaCallback"
       }
     },
@@ -307,13 +291,6 @@
           },
           {
             "name": "session_state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
@@ -507,13 +484,6 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "response_mode",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "operationId": "CognitoLoginController.cognitoCallback"
@@ -617,13 +587,6 @@
           },
           {
             "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
@@ -775,13 +738,6 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "response_mode",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "operationId": "GoogleLoginController.googleCallback"
@@ -847,13 +803,6 @@
           },
           {
             "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
@@ -961,13 +910,6 @@
           },
           {
             "name": "state",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "response_mode",
             "in": "query",
             "schema": {
               "type": "string"
