# services/authentication-service/src/modules/auth/cognito-login.controller.ts
@@ -24,6 +24,7 @@ const queryGen = (from: 'body' | 'query') => {
     return {
       state: toQueryString({
         client_id: req[from].client_id,
+        response_mode: req.query.response_mode,
         state: req.query.state,
       }),
     };
@@ -144,7 +145,6 @@ export class CognitoLoginController {
   async cognitoCallback(
     @param.query.string('code') code: string,
     @param.query.string('state') state: string,
-    @param.query.string('response_mode') responseMode: string,
     @inject(RestBindings.Http.RESPONSE) response: Response,
     @inject(AuthenticationBindings.CURRENT_USER)
     user: AuthUser | undefined,
@@ -152,6 +152,8 @@ export class CognitoLoginController {
     const stateParams = new URLSearchParams(state);
     const clientId = stateParams.get('client_id');
     const clientState = stateParams.get('state');
+    const responseMode = stateParams.get('response_mode');
+
     if (!clientId || !user) {
       throw new AuthenticationErrors.ClientInvalid();
     }
